@@ -9,9 +9,6 @@
 - SSH public key authentication
 - CLI restore app
 
-== Before rc2 ==
-- File excludes when uploading directly to SFTP? (can't use os.walk)
-
 == Before rc3 ==
 - Don't crash if we don't have paramiko; just disable the remote features
 - Support for remote folders (restore)
