@@ -30,6 +30,10 @@ from fwbackups import operations
 from fwbackups import shutil_modded
 from fwbackups import sftp
 
+STATUS_INITIALIZING = 0
+STATUS_RESTORING = 1
+STATUS_RECEIVING_FROM_REMOTE = 2
+
 class RestoreOperation(operations.Common):
   def __init__(self, logger=None):
     """Initializes a restore operation. If no logger is specified, a new one
@@ -110,8 +114,8 @@ class RestoreOperation(operations.Common):
     if not self.prepareDestinationFolder(self.options['Destination']):
       return False
     if self.options['SourceType'] == 'remote archive (SSH)' or (self.options['SourceType'] == 'set' and self.options['RemoteSource']):
-      self._total = 1
       self.logger.logmsg('INFO', _('Receiving files from server'))
+      self._status = 2 # receiving files
       try:
         # download file to location where we expect source to be
         client, sftpClient = sftp.connect(self.options['RemoteHost'], self.options['RemoteUsername'], self.options['RemotePassword'], self.options['RemotePort'])
@@ -124,7 +128,7 @@ class RestoreOperation(operations.Common):
       except Exception, error:
         self.logger.logmsg('DEBUG', _('Could not receive file from server: %s' % error))
         wasErrors = True
-    self._total = 2
+    self.status = 1 # restoring
     try:
       if self.options['SourceType'] == 'set': # we don't know the type
         if os.path.isfile(self.options['Source']):
